--- a/cryptoRFoutline.Rmd
+++ b/cryptoRFoutline.Rmd
@@ -74,6 +74,7 @@ EMA_26 (1..n)
 ```{r}
 library(rjson)
 
+#Incorporate using system command/direct api call?
 #curl "https://api.hitbtc.com/api/2/public/candles/ETHBTC?period=M1&limit=1000" > BTC.json
 
 json_file <- "BTC.json"
